Refactored CDM field-size guardrail check reporting